# eBay-Blu-Ray-Assist

./: .gitignore  .mcp.json  README.md
backend/: pyproject.toml
backend/src/ebay_movie_assist/: config.py  main.py  models.py
backend/src/ebay_movie_assist/routes/: process.py  template.py  upload.py
backend/src/ebay_movie_assist/services/: pricing_service.py  s3_service.py  template_service.py  tmdb_service.py
backend/src/ebay_movie_assist/template/: ebay_bluray_template_guide.md
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: ImageUpload.svelte  MovieForm.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
mcp-server/: README.md  pyproject.toml
mcp-server/src/ebay_bluray_mcp/: __init__.py  config.py  server.py
mcp-server/src/ebay_bluray_mcp/services/: __init__.py  csv_service.py  s3_service.py  tmdb_service.py
