[project]
name = "ebay-movie-assist"
version = "0.1.0"
authors = [
    { name = "Ryan Davis", email = "ryancraigdavis@gmail.com" },
]
description = "ebay movie assistant backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]

build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/ebay_movie_assist"]

[tool.hatch.metadata]
allow-direct-references = true
